--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Hello HTML</title>
-  </head>
-  <body>
-    <h1>Hello HTML, my name is Volodymyr!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</body>
 </html>
